<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_LabelBillTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_BillTotal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_EnterBillTotal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_EnterBillTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/editableText_BillTotal"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_LabelBillTotal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_LabelTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioButtonTextView_Tip"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup_Tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_EnterBillTotal" />

    <RadioGroup
        android:id="@+id/radioGroup_Tip"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/textView_LabelTip"
        app:layout_constraintTop_toBottomOf="@+id/editText_EnterBillTotal"
        app:layout_wrapBehaviorInParent="horizontal_only">

        <RadioButton
            android:id="@+id/radioButton_Tip10"

            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioOption_Tip10"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton_Tip15"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_Tip15"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton_Tip18"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_Tip18"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton_TipCustom"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_TipCustom"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_LabelCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/seekTextView_TipCustom"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_Tip" />

    <SeekBar
        android:id="@+id/seekBar_CustomTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="50"
        android:progress="40"
        app:layout_constraintBottom_toBottomOf="@+id/textView_LabelCustom"
        app:layout_constraintEnd_toStartOf="@+id/textView_CustomTipValue"
        app:layout_constraintStart_toEndOf="@+id/textView_LabelCustom"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_Tip" />

    <TextView
        android:id="@+id/textView_CustomTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/seekTextView_InitialTip"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView_LabelCustom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_Tip" />

    <TextView
        android:id="@+id/textView_LabelTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TextView_TipAmount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_LabelCustom" />

    <TextView
        android:id="@+id/textView_DollarTipAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/TextView_InitialAmount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_LabelTipAmount"
        app:layout_constraintTop_toTopOf="@+id/textView_LabelTipAmount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TextView_Amount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_LabelTipAmount" />

    <TextView
        android:id="@+id/textView_DollarTotalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/TextView_InitialAmount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioButtonTextView_Split"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup_SplitBy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup_SplitBy" />

    <RadioGroup
        android:id="@+id/radioGroup_SplitBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView_DollarTotalAmount">

        <RadioButton
            android:id="@+id/radioButton_SplitByOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioOption_Split1"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton_SplitByTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_Split2"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton_SplitByThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_Split3"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/radioButton_SplitByFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_Split4"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView_LabeltotalperPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/TextView_TotalAmountPerPerson"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_SplitBy" />

    <TextView
        android:id="@+id/textView_TotalPerPersonAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/TextView_InitialAmount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_LabeltotalperPerson"
        app:layout_constraintStart_toEndOf="@+id/textView_LabeltotalperPerson" />

    <Button
        android:id="@+id/button_Clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/grey"
        android:text="@string/button_Clear"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_TotalPerPersonAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>